[package]
name = "batplug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true  # Automatically strip symbols from the binary.

[dependencies]
serde = { version = "1", features = ["derive"] }
ureq = { version = "*", features = ["json"] }
confy = {version = "*"}
